initial spring mvc

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring MVC Theme Resolver</title>
+    <title>Spring MVC </title>
 </head>
-<body th:style="'background-color: ' + ${theme.background.color} + '; color: ' + ${theme.text.color}">
-    <h1 th:text="${theme.welcome.message}"></h1>
-    <p>
-        <a th:href="@{/home(theme='default')}">Tema Padrão</a> | 
-        <a th:href="@{/home(theme='dark')}">Tema Escuro</a>
-    </p>
+<body >
+    
+	<h2>Bem-vindo ao spring MVC </h2>
 </body>
 </html>
