--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,5 +6,7 @@
 <body >
     
 	<h2>Bem-vindo ao spring MVC </h2>
+	
+	<p><a th:href="@{/changeLocale(lang='en')}">LocaleResolve</a></p>
 </body>
 </html>
