--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,19 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring MVC </title>
+    <title>Home</title>
+    <link th:href="@{/css/day.css}" rel="stylesheet" id="theme-link">
 </head>
-<body >
-    
-	<h2>Bem-vindo ao spring MVC </h2>
-	
-	<p><a th:href="@{/changeLocale(lang='en')}">LocaleResolve</a></p>
+<body>
+    <h1>Welcome to the Home Page</h1>
+    <button onclick="setTheme('day')">Default Theme</button>
+    <button onclick="setTheme('night')">Dark Theme</button>
+
+    <script>
+        function setTheme(theme) {
+            document.getElementById('theme-link').href = '/css/' + theme + '.css';
+        }
+    </script>
 </body>
 </html>
